--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-  - "3.7"
   - "3.8"
+  - "3.9"
 
 
 # Glpk solver must be install though apt, as it is not a python package  
@@ -11,7 +11,7 @@ before_install:
 
 # Install python dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install --install-option test -e .
 
 # Run tests
 script:
