Further attempted requirements fixes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 # Install python dependencies
 install:
-  - pip install --install-option test -e .
+  - pip install -r requirements.txt
 
 # Run tests
 script:
