--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-networkx>=2.3
+networkx>=2.3; python_version < "3.9"
+networkx>=2.5; python_version >= "3.9"
 numpy>=1.16.3
 PuLP==1.6.9; python_version <= "3.7"
 PuLP>=2; python_version > "3.7"
