--- a/tests/instances/graph_coloring_seperate_costs.yaml
+++ b/tests/instances/graph_coloring_seperate_costs.yaml
@@ -20,22 +20,25 @@ variables:
 constraints:
   cost_v1:
     type: extensional
-    variables: v1
+    variables:
+      - v1
     values:
-      -0.1: R
-      0.1: G
+      '-0.1': R
+      '0.1': G
   cost_v2:
     type: extensional
-    variables: v2
+    variables:
+      - v2
     values:
-      0.1: R
-      -0.1: G
+      '0.1': R
+      '-0.1': G
   cost_v3:
     type: extensional
-    variables: v3
+    variables:
+      - v3
     values:
-      0.1: R
-      -0.1: G
+      '0.1': R
+      '-0.1': G
   diff_1_2:
     type: intention
     function: 1 if v1 == v2 else 0
