--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 networkx>=2.3; python_version < "3.9"
 networkx>=2.5; python_version >= "3.9"
+pydot
 numpy>=1.16.3
 PuLP==1.6.9; python_version <= "3.7"
 PuLP>=2; python_version > "3.7"
