--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -5,7 +5,7 @@ on:
     - master
   pull_request:
     branches:
-    - master
+    - masterg
   workflow_dispatch:
     
 jobs:
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v2
+    - name: Install dependencies
+      run: |
+        python -m pip install -r docs-requirements.txt
     - uses: actions/checkout@master
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
