--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/setup-python@v2
     - name: Install dependencies
       run: |
-        python -m pip install -r docs-requirements.txt
+        python -m pip install -r doc-requirements.txt
     - uses: actions/checkout@master
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
