--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -16,11 +16,10 @@ jobs:
     - uses: actions/checkout@master
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - name: Install dependencies
-      run: |
-        python -m pip install -r doc-requirements.txt
     - name: Build and Commit
       uses: sphinx-notes/pages@v2
+      with:
+        requirements_path: doc-requirements.txt
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
