--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v2
-    - uses: actions/checkout@master
       with:
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+        python-version: '3.10'
     - name: Build and Commit
-      uses: sphinx-notes/pages@v2
+      uses: sphinx-notes/pages@v3
       with:
         requirements_path: doc-requirements.txt
     - name: Push changes
+      if: ${{ GITHUB_REF_NAME == "master" }}
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
