--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -20,7 +20,7 @@ jobs:
       with:
         requirements_path: doc-requirements.txt
     - name: Push changes
-      if: ${{ GITHUB_REF_NAME == "master" }}
+      if: ${{ $GITHUB_REF_NAME == "master" }}
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
