--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -15,10 +15,13 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+        cache: 'pip'
+    - run: pip install -r requirements.txt
     - name: Build and Commit
       uses: sphinx-notes/pages@v3
       with:
         requirements_path: doc-requirements.txt
+    - run: echo ${{ github.ref_name }}
     - name: Push changes
       if: ${{ github.ref_name == 'master' }}
       uses: ad-m/github-push-action@master
