--- a/.github/workflows/sphinx_notes_pages.yaml
+++ b/.github/workflows/sphinx_notes_pages.yaml
@@ -16,6 +16,9 @@ jobs:
       with:
         python-version: '3.10'
         cache: 'pip'
+    - uses: actions/checkout@master
+      with:
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - run: pip install -r requirements.txt
     - name: Build and Commit
       uses: sphinx-notes/pages@v3
