--- a/.github/workflows/build-docs-test.yaml
+++ b/.github/workflows/build-docs-test.yaml
@@ -17,3 +17,4 @@ jobs:
       uses: ammaraskar/sphinx-action@0.4
       with:
         docs-folder: "docs/"
+        build-command: "sphinx-build -b html . _build"
